<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg"
        >
        
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/logo" />

    </LinearLayout>



        <DatePicker
            android:id="@+id/InsulinLogDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

</DatePicker>




        <TimePicker
            android:id="@+id/InsulinLogTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

</TimePicker>
    


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insulin_dosage_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/InsulinDosageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insulin_type_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <Spinner
        android:id="@+id/InsulinTypeSpinner"
        android:layout_width="171dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >







        <Button
            android:id="@+id/InsulinLogSubmitButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text" />



        <Button
            android:id="@+id/InsulinLogCancelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

    </LinearLayout>

</LinearLayout>