<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg"
        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/logo" />

    </LinearLayout>

        <DatePicker
            android:id="@+id/BloodGlucoseLogDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

</DatePicker>

        <TimePicker
            android:id="@+id/BloodGlucoseLogTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

</TimePicker>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
        <TextView
            android:id="@+id/ResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glucose_reading_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ResultEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/ResultTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glucose_type_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/GlucoseTypeSpinner"
        android:layout_width="171dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

    </LinearLayout>

</LinearLayout>